--- a/ERP/Core.Erp.Web/Areas/General/Views/Bodega/_GridViewPartial_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Bodega/_GridViewPartial_bodega.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("cod_bodega","Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("bo_Descripcion","Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(60);
         settings.Columns.Add("cod_punto_emision","Punto emisión").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
