--- a/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/_GridViewPartial_sucursal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/_GridViewPartial_sucursal.cshtml
@@ -81,7 +81,16 @@
         settings.Columns.Add("Su_Descripcion","Descripción").Width = Unit.Percentage(40);
         settings.Columns.Add("Su_CodigoEstablecimiento","Establecimiento").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Ruc","Ruc").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.Caption = "Bodegas";
