--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext.cshtml
@@ -102,6 +102,16 @@
             });
         });
         settings.Columns.Add("oe_observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
 
         settings.Columns.Add(column =>
         {
