--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/_GridViewPartial_recepcion_oc_ext.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/_GridViewPartial_recepcion_oc_ext.cshtml
@@ -97,7 +97,17 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add("or_observacion", "Obaservación").Width = Unit.Percentage(30);
+        settings.Columns.Add("or_observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
 
     });
 }
