--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
@@ -90,7 +90,16 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
         });
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
 
     });
 
