--- a/ERP/Core.Erp.Web/Areas/General/Views/Banco/_GridViewPartial_banco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Banco/_GridViewPartial_banco.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("IdBanco", "ID").Width = Unit.Percentage(20);
         settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(40);
         settings.Columns.Add("CodigoLegal", "Codigo legal").Width = Unit.Percentage(20);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
