--- a/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/_GridViewPartial_catalogo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/_GridViewPartial_catalogo.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("CodCatalogo","Código").Width = Unit.Percentage(10);
         settings.Columns.Add("ca_descripcion","Descripción").Width = Unit.Percentage(70);
         settings.Columns.Add("ca_orden","Orden").Width = Unit.Percentage(10);
-        settings.Columns.Add("ca_estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
