--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
@@ -82,8 +82,16 @@
         settings.Columns.Add("CodPais", "Codigo").Width = Unit.Percentage(20);
         settings.Columns.Add("Nombre", "Nombre").Width = Unit.Percentage(35);
         settings.Columns.Add("Nacionalidad", "Nacionalidad").Width = Unit.Percentage(35);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.Caption = "Región";
