--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/_GridViewPartial_parroquia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/_GridViewPartial_parroquia.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("IdParroquia","ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cod_parroquia", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("nom_parroquia", "Descripción").Width = Unit.Percentage(40);
-        settings.Columns.Add("estado","Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
