--- a/ERP/Core.Erp.Web/Areas/General/Views/Transportista/_GridViewPartial_transportista.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Transportista/_GridViewPartial_transportista.cshtml
@@ -83,8 +83,16 @@
         settings.Columns.Add("Cedula", "Cedula").Width = Unit.Percentage(10);
         settings.Columns.Add("Nombre", "Nombre").Width = Unit.Percentage(10);
         settings.Columns.Add("Placa", "Placa").Width = Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
