--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
@@ -62,8 +62,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
