--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
@@ -86,8 +86,16 @@
         settings.Columns.Add("IdCategoria", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cod_categoria", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("ca_Categoria", "Descripción").Width = Unit.Percentage(50);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        }); settings.Columns.Add(column =>
         {
             column.Caption = "Línea";
             column.Width = Unit.Pixel(120);
