--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
@@ -80,8 +80,16 @@
         settings.Columns.Add("IdLinea", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cod_linea", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("nom_linea", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
 
         settings.Columns.Add(column =>
         {
