--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
@@ -80,7 +80,16 @@
         settings.Columns.Add("IdMovi_inven_tipo","ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("tm_descripcion","Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
         settings.Columns.Add("cm_descripcionCorta","Descripción corta").Width = System.Web.UI.WebControls.Unit.Percentage(30);
-        settings.Columns.Add("Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
