--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/_GridViewPartial_catalogotipo_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/_GridViewPartial_catalogotipo_inventario.cshtml
@@ -82,20 +82,28 @@
 
         settings.Columns.Add("cod_Catalogo_tipo", "Abreviatura").Width = Unit.Percentage(25);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(50);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(25);
         settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        }); settings.Columns.Add(column =>
         {
             column.Caption = "Catálogo";
             column.Width = Unit.Pixel(150);
             column.SetDataItemTemplateContent(container =>
             {
-                    Html.DevExpress().HyperLink(hyperlink =>
-                    {
-                        var keyValue = DataBinder.Eval(container.DataItem, "IdCatalogo_tipo");
-                        hyperlink.Properties.Text = "Catálogos";
-                        hyperlink.NavigateUrl = Url.Action("Index", "CatalogoInventario", new { IdCatalogo_tipo = keyValue });
-                    }).Render();
-              
+                Html.DevExpress().HyperLink(hyperlink =>
+                {
+                    var keyValue = DataBinder.Eval(container.DataItem, "IdCatalogo_tipo");
+                    hyperlink.Properties.Text = "Catálogos";
+                    hyperlink.NavigateUrl = Url.Action("Index", "CatalogoInventario", new { IdCatalogo_tipo = keyValue });
+                }).Render();
+
             });
         });
 
