--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
@@ -81,9 +81,16 @@
         settings.Columns.Add("IdGrupo", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cod_grupo", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("nom_grupo", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
-
+            });
+        });
         settings.Columns.Add(column =>
         {
 
