--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
@@ -80,7 +80,16 @@
         });
         settings.Columns.Add("IdMarca", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(70);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
