--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/_GridViewPartial_presentacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/_GridViewPartial_presentacion.cshtml
@@ -81,7 +81,16 @@
 
         settings.Columns.Add("IdPresentacion", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("nom_presentacion", "Descripción").Width = Unit.Percentage(70);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
