--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/_GridViewPartial_subgrupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/_GridViewPartial_subgrupo.cshtml
@@ -81,7 +81,16 @@
         settings.Columns.Add("IdSubgrupo", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cod_subgrupo", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("nom_subgrupo", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
