--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/_GridViewPartial_unidad_medida.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/UnidadDeMedida/_GridViewPartial_unidad_medida.cshtml
@@ -1,85 +1,94 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_unidad_medida";
-        settings.CallbackRouteValues = new { Controller = "UnidadDeMedida", Action = "GridViewPartial_unidad_medida" };
-        settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdUnidadMedida";
+    settings.Name = "GridView_unidad_medida";
+    settings.CallbackRouteValues = new { Controller = "UnidadDeMedida", Action = "GridViewPartial_unidad_medida" };
+    settings.Width = Unit.Percentage(100);
+    settings.KeyFieldName = "IdUnidadMedida";
 
-        //CConfiguracion responsive
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-        //Configuración scrolling y pager
-        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.Settings.VerticalScrollableHeight = 400;
-        settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
-        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-        settings.SettingsPager.AlwaysShowPager = true;
-        //Configuración filtro por columna
-        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        settings.Settings.ShowFilterRow = true;
-        settings.Settings.ShowHeaderFilterButton = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-        //Configuracion exportacion
-        settings.SettingsExport.EnableClientSideExportAPI = true;
-        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
+    //CConfiguracion responsive
+    settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+    settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+    settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+    settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+    settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+    //Configuración scrolling y pager
+    settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
+    settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+    settings.Settings.VerticalScrollableHeight = 400;
+    settings.SettingsPager.Visible = true;
+    settings.SettingsPager.PageSize = 10;
+    settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
+    settings.SettingsPager.AlwaysShowPager = true;
+    //Configuración filtro por columna
+    settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+    settings.Settings.ShowFilterRow = true;
+    settings.Settings.ShowHeaderFilterButton = true;
+    settings.SettingsBehavior.AllowSelectByRowClick = true;
+    //Configuracion exportacion
+    settings.SettingsExport.EnableClientSideExportAPI = true;
+    settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
+    settings.Toolbars.Add(t =>
+    {
+        t.EnableAdaptivity = true;
+        t.Items.Add(GridViewToolbarCommand.ExportToPdf);
+        t.Items.Add(GridViewToolbarCommand.ExportToXls);
+        t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
+        t.Items.Add(GridViewToolbarCommand.ExportToDocx);
+        t.Items.Add(GridViewToolbarCommand.ExportToRtf);
+        t.Items.Add(GridViewToolbarCommand.ExportToCsv);
+    });
+    settings.SettingsExport.RenderBrick = (sender, e) =>
+    {
+        if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
+            e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
+    };
+    //Evento para pintar de rojo las filas anuladas
+    settings.HtmlRowPrepared = (s, e) =>
+    {
+        if (Convert.ToString(e.GetValue("Estado")) == "I")
         {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf);
-            t.Items.Add(GridViewToolbarCommand.ExportToXls);
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx);
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf);
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv);
-        });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
+            e.Row.ForeColor = System.Drawing.Color.Red;
+        }
+    };
+    settings.Columns.Add(c =>
+    {
+        c.Caption = "#";
+        c.SetDataItemTemplateContent(tc =>
         {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-        };
-        //Evento para pintar de rojo las filas anuladas
-        settings.HtmlRowPrepared = (s, e) =>
-        {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
-            {
-                e.Row.ForeColor = System.Drawing.Color.Red;
-            }
-        };
-        settings.Columns.Add(c =>
-        {
-            c.Caption = "#";
-            c.SetDataItemTemplateContent(tc =>
-            {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-            });
-            c.SetHeaderTemplateContent(tc =>
+            if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+            Html.ActionLink("Modificar", "Modificar", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") }) + "&nbsp;" +
+                    Html.ActionLink("Anular", "Anular", new { IdUnidadMedida = DataBinder.Eval(tc.DataItem, "IdUnidadMedida") },
+                        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                 );
-            });
-            c.Settings.AllowDragDrop = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
+            }
         });
+        c.SetHeaderTemplateContent(tc =>
+        {
+            ViewContext.Writer.Write(
+                Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+            );
+        });
+        c.Settings.AllowDragDrop = DefaultBoolean.False;
+        c.Settings.AllowSort = DefaultBoolean.False;
+        c.Width = Unit.Pixel(150);
+    });
 
-        settings.Columns.Add("IdUnidadMedida");
-        settings.Columns.Add("cod_alterno");
-        settings.Columns.Add("Descripcion");
-        settings.Columns.Add("Estado");
+    settings.Columns.Add("IdUnidadMedida", "ID").Width = Unit.Percentage(15);
+    settings.Columns.Add("cod_alterno", "Código").Width = Unit.Percentage(15);
+    settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(15);
+    settings.Columns.Add(column =>
+    {
+        column.FieldName = "EstadoBool";
+        column.Caption = "Estado";
+        column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+        column.EditorProperties().CheckBox(sp =>
+        {
+
+        });
+    });
     });
 }
 @grid.Bind(Model).GetHtml()
