--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/_GridViewPartial_usuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/_GridViewPartial_usuario.cshtml
@@ -17,7 +17,7 @@
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
         settings.Settings.VerticalScrollableHeight = 400;
         settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10000;
+        settings.SettingsPager.PageSize = 10;
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
         //Configuración filtro por columna
@@ -78,7 +78,16 @@
 
         settings.Columns.Add("IdUsuario","Usuario").Width = Unit.Percentage(40);
         settings.Columns.Add("Nombre","Nombre").Width = Unit.Percentage(50);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
