--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
@@ -95,7 +95,7 @@
 
 <script>
     $(function () {
-
+        actualizar_periodo();
         //Date picker
         $('#pe_FechaIni').datepicker({
             autoclose: true
