--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
@@ -87,8 +87,18 @@
         settings.Columns.Add("Empleado","Nombres").Width=Unit.Percentage(15);
         settings.Columns.Add(column =>
         {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+        settings.Columns.Add(column =>
+        {
             column.FieldName = "em_fechaIngaRol";
-            column.Caption = "Ingresi";
+            column.Caption = "Ingreso";
             column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
 
