--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/_GridViewPartial_horario_planificacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/_GridViewPartial_horario_planificacion.cshtml
@@ -103,8 +103,16 @@
             });
         });
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(65);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
