--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos.cshtml
@@ -54,7 +54,7 @@
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
         };
-    
+
 
         settings.Columns.Add(c =>
         {
@@ -85,7 +85,16 @@
         settings.Columns.Add("AnioFiscal","Año").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(20);
         settings.Columns.Add("pe_nombreCompleto", "Empleado").Width = Unit.Percentage(40);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
 
     });
 }
