--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/_GridView1Partial_turnos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/_GridView1Partial_turnos.cshtml
@@ -89,8 +89,16 @@
         settings.Columns.Add("Viernes", "Viernes").Width = Unit.Percentage(10);
         settings.Columns.Add("Sabado", "Sábado").Width = Unit.Percentage(10);
         settings.Columns.Add("Domingo", "Domingo").Width = Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
