--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones.cshtml
@@ -169,7 +169,16 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.Caption = "#";
