--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
@@ -83,6 +83,16 @@
         settings.Columns.Add("IdArea","ID").Width=Unit.Percentage(10);
         settings.Columns.Add("Division", "División").Width = Unit.Percentage(45);
         settings.Columns.Add("Descripcion","Descripción").Width = Unit.Percentage(45);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
