--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/_GridViewPartial_cargo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/_GridViewPartial_cargo.cshtml
@@ -81,8 +81,16 @@
 
         settings.Columns.Add("IdCargo", "ID").Width=Unit.Percentage(10);
         settings.Columns.Add("ca_descripcion","Cargo").Width = Unit.Percentage(80);
-        settings.Columns.Add("Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
 
     });
 }
