--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
@@ -78,8 +78,16 @@
         settings.Columns.Add("IdTipoCatalogo","ID").Width=Unit.Percentage(8);
         settings.Columns.Add("Codigo","Código").Width = Unit.Percentage(8);
         settings.Columns.Add("tc_Descripcion","Descripción").Width = Unit.Percentage(70);
-        settings.Columns.Add("ca_estado","Estado").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        }); settings.Columns.Add(column =>
         {
             column.Caption = "Catálogo";
             column.Width = Unit.Pixel(100);
