--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Departamento/_GridViewPartial_departamento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Departamento/_GridViewPartial_departamento.cshtml
@@ -81,8 +81,16 @@
 
         settings.Columns.Add("IdDepartamento","ID").Width = Unit.Percentage(10);
         settings.Columns.Add("de_descripcion","Departamento").Width = Unit.Percentage(80);
-        settings.Columns.Add("Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
 
     });
     
