--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/_GridViewPartial_periodo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/_GridViewPartial_periodo.cshtml
@@ -88,7 +88,16 @@
         settings.Columns.Add("pe_mes","Mes").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_FechaIni","Fecha inicio").Width = Unit.Percentage(25);
         settings.Columns.Add("pe_FechaFin","Fecha hasta").Width = Unit.Percentage(25);
-        settings.Columns.Add("pe_estado","Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
