--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos.cshtml
@@ -142,8 +142,16 @@
 
                 });
             });
-            settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "EstadoBool";
+                column.Caption = "Estado";
+                column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+                column.EditorProperties().CheckBox(sp =>
+                {
 
+                });
+            });
 
 
         });
