--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Anular.cshtml
@@ -80,7 +80,7 @@
                     @Html.DevExpress().CheckBoxFor(q => q.EsMujerEmbarazada, settings =>
            {
                settings.Name = "EsMujerEmbarazada";
-               settings.Text = "¿Es mujer emabaraza?";
+               settings.Text = "¿Es mujer embarazada?";
 
            }).GetHtml()
                 </div>
