--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Nuevo.cshtml
@@ -76,7 +76,7 @@
                     @Html.DevExpress().CheckBoxFor(q => q.EsMujerEmbarazada, settings =>
                            {
                                settings.Name = "EsMujerEmbarazada";
-                               settings.Text = "¿Es mujer emabaraza?";
+                               settings.Text = "¿Es mujer embarazada?";
 
                            }).GetHtml()
                 </div>
